--- a/app/src/main/res/layout/vehicle_box.xml
+++ b/app/src/main/res/layout/vehicle_box.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="300dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
+    android:background="#fff">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textview"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
         android:text="Vehicle options"
         android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
     <ImageButton
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/ic_motorbike"
         android:id="@+id/motorbike"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_gravity="right"/>
     <ImageButton
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:background="@drawable/ic_car"
         android:id="@+id/car"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        android:layout_gravity="left"/>
+    </LinearLayout>
+</LinearLayout>
