--- a/app/src/main/res/layout/about_us_info.xml
+++ b/app/src/main/res/layout/about_us_info.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/aboutus_listview"
+        android:layout_marginTop="50dp"
         android:layout_alignParentBottom="true">
 
     </ListView>
