--- a/app/src/main/res/layout/aboutus_listview.xml
+++ b/app/src/main/res/layout/aboutus_listview.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -14,23 +14,29 @@
         android:layout_height="wrap_content"
         android:id="@+id/self_name"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="10dp"
-        android:text="Name"/>
+        android:text="Name"
+        android:textSize="15dp"
+        android:textColor="#0000"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/self_ID"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="50dp"
-        android:text="ID, Class, School" />
+        android:text="ID, Class, School"
+        android:textSize="10dp"
+        android:textColor="#808080"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/self_email"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="90dp"
-        android:text="EMail" />
+        android:text="EMail"
+        android:textSize="10dp"
+        android:textColor="#808080"/>
 </RelativeLayout>
